--- a/backend/templates/posts/edit.html
+++ b/backend/templates/posts/edit.html
@@ -161,8 +161,8 @@
 </div>	 <!-- End .modal -->
 
 
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
+<script src="/static/js/vendor/jquery-3.2.1.min.js"></script>
+<script src="/static/js/vendor/simplemde.min.js"></script>
 <script>
     $(document).ready(function() {
 	var simplemde = new SimpleMDE({
