--- a/backend/static/styles/sass/_posts.scss
+++ b/backend/static/styles/sass/_posts.scss
@@ -242,7 +242,9 @@ article {
 	border: 1px solid #ddd;
 	background: white;
     }
-    
+    .editor-preview-side {
+	z-index: 1000;
+    }    
     /* No gap between category and tags */
     .col-sm-3, .col-sm-9 {
 	padding: 0;
