--- a/backend/templates/pages/about.html
+++ b/backend/templates/pages/about.html
@@ -26,8 +26,8 @@
 	<p> Our <a href="/browse/">browse page</a> makes it very easy for readers to discover the stories you have shared with our community. The best stories are also featured on our front page, suggested to the readers who liked similar stories, shared with our&nbsp;<a href="https://twitter.com/fictionhub">social media followers</a>, and sent to all of our subscribers in the weekly email digest.</p>
 	<img src="/media/images/pages/about/story-suggestions.png"/>	
 	<p>Readers who've enjoyed your stories can subscribe to your blog and receive the updates whenever you publish something.</p>
-	<p>This way, you don't have to worry about learning how to use blogging software and spend your time on building traffic and self-promotion, you can just focus on doing what you love - writing - and we will make sure that the audience of readers finds your stories. </p>
-	<h2>Receive great feedback</h2>
+	<p>This way, you don't have to worry about learning how to use complicated blogging software or spend your time on building traffic and self-promotion, you can just focus on doing what you love - writing - and we will make sure that the audience of readers finds your stories. </p>
+	<h2>Receive feedback</h2>
 	<p> My goal is to build a friendly and helpful community of authors who share their experience, and help each other to get better at writing. Share your stories to receive useful advice and feedback, and give feedback to help others!</p>
 	<!-- <p>[Comments and feedback]</p> -->
 	<h2>Become a better writer</h2>
