--- a/backend/templates/pages/about.html
+++ b/backend/templates/pages/about.html
@@ -29,6 +29,7 @@
 	<p>This way, you don't have to worry about learning how to use complicated blogging software or spend your time on building traffic and self-promotion, you can just focus on doing what you love - writing - and we will make sure that the audience of readers finds your stories. </p>
 	<h2>Receive feedback</h2>
 	<p> My goal is to build a friendly and helpful community of authors who share their experience, and help each other to get better at writing. Share your stories to receive useful advice and feedback, and give feedback to help others!</p>
+	<p> And don't fogret to join the <a href="/discussion/">discussion forum</a> where you can ask questions and talk to other great writers.</p>
 	<!-- <p>[Comments and feedback]</p> -->
 	<h2>Become a better writer</h2>
 	<p>We also have a great set of tools that will help you to develop good habits and practice your skill regularly, in a fun and engaging way.</p>
