--- a/backend/templates/elements/subnav.html
+++ b/backend/templates/elements/subnav.html
@@ -31,7 +31,7 @@
 	  <ul class="dropdown-menu" role="menu" id="category">
 	    <li><a href="all">All</a></li>
 	    {% for category in categories %}
-            <li><a href="{{category.slug}}">{{category.title}}</a></li>
+            <li><a href="/{{category.slug}}">{{category.title}}</a></li>
 	    {% endfor %}	    
 	  </ul>	
 	</div>
