--- a/backend/static/styles/sass/style.scss
+++ b/backend/static/styles/sass/style.scss
@@ -89,7 +89,9 @@ $black-bluish: #3d454b;
     left: 0;
     width: 100%;
     display: none;
-    padding: 20px;
+    padding: 22px;
+    text-align: center;
+    font-size: 18px;    
 }
 
 /* Modals */
