--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -37,7 +37,10 @@
 
   <!-- Modal forms -->
   {% include "elements/submit.html" %}
-  {% include "elements/login.html" %}    
+  {% include "elements/login.html" %}
+
+  <!-- Alerts -->
+  {% include "elements/alert-subscribed.html" %}      
 
   <!-- Scripts bundle -->
   <script src="{% static "/js/dist/fictionhub.js" %}" async></script>
