--- a/backend/static/styles/sass/style.scss
+++ b/backend/static/styles/sass/style.scss
@@ -113,7 +113,8 @@ $black-bluish: #3d454b;
 /* Footer */
 
 footer {
-    height: 40px;    
+    height: 40px;
+    padding: 0 10px;
     background-color: #333a42;
     color: #babfc2;    
     a {
