--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -28,6 +28,7 @@
   <!-- Footer -->
   <footer>
     <hr/>
+    contact@fictionhub.io
     <div class="right">
       Made by <a href="http://rayalez.com">Ray Alez</a>
     </div>
