--- a/backend/static_serve/styles/sass/_general.scss
+++ b/backend/static_serve/styles/sass/_general.scss
@@ -66,7 +66,7 @@ a {
     cursor: pointer;
 }
 
-article p a {
+article a, article p a {
     color: $blue;
 }
 
@@ -135,4 +135,12 @@ textarea, textarea:focus, textarea:active {
     text-align:left;
     /* inline-block space fix */
     margin-right:-4px;
+}
+
+.panel {
+    border: 1px solid #e9e9e9;
+    webkit-box-shadow: none;
+    box-shadow: none;
+    padding: 20px;
+    background: #fcfcfc;
 }
