--- a/backend/static_serve/styles/sass/_posts.scss
+++ b/backend/static_serve/styles/sass/_posts.scss
@@ -18,6 +18,9 @@ article {
     .read-more {
 	font-size: 12px;
 	color: rgba(0, 0, 0, 0.44);
+	&:hover, &:active, &:focus, &:visited {
+            color: rgba(0, 0, 0, 0.44);
+        }
     }
 
     .prev {
@@ -174,6 +177,10 @@ article {
 	float: right;
 	a {
 	    cursor: pointer;
+	    color: $black;
+	    &:hover, &:active, &:focus, &:visited {
+                color: $black;
+            }
 	}
 	.score {
 	    font-weight: bold;
