--- a/backend/static/styles/sass/_posts.scss
+++ b/backend/static/styles/sass/_posts.scss
@@ -18,9 +18,6 @@ article {
     .read-more {
 	font-size: 12px;
 	color: rgba(0, 0, 0, 0.44);
-	&:hover, &:active, &:focus, &:visited {
-            color: rgba(0, 0, 0, 0.44);
-        }
     }
 
     .prev {
@@ -175,7 +172,7 @@ article {
     padding: 20px;
     .footer {
 	float: right;
-	a, .btn {
+	a {
 	    cursor: pointer;
 	    color: $black;
 	    &:hover, &:active, &:focus, &:visited {
