--- a/backend/static_serve/styles/sass/_general.scss
+++ b/backend/static_serve/styles/sass/_general.scss
@@ -66,12 +66,13 @@ a {
     cursor: pointer;
 }
 
-article a, article p a {
+article .panel a, article p a {
     color: $blue;
     &:hover, &:active, &:focus, &:visited {
         color: $blue;
     }
 }
+
 
 hr {
     border:none;
