--- a/backend/templates/boilerplate.html
+++ b/backend/templates/boilerplate.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="container">
-  <div class="row edit">
+  <div class="row">
     <div class="col-xs-12">
     </div>   <!-- End .col-xs-12 -->
   </div> <!-- End .row .edit -->
