--- a/backend/templates/elements/subnav.html
+++ b/backend/templates/elements/subnav.html
@@ -45,6 +45,24 @@
 	  </ul>	
 	</div>
 
+	<!-- Price -->
+	<!-- 
+	<div class="dropdown">
+	  <a class="btn btn-default" data-toggle="dropdown">
+	    {% if sorting %}
+	    Price: All
+	    {% else %}
+	    Price: All
+	    {% endif %}	    
+	  </a>
+	  <ul class="dropdown-menu query-filter" role="menu"  id="price">
+            <li><a id="all"> All </a></li>	    
+            <li><a id="free"> Free </a></li>
+            <li><a id="paid"> Paid </a></li>
+	  </ul>	
+	</div>
+	-->
+	
       </div> <!-- End filters col-sm-6 -->
       <div class="col-xs-12 col-sm-6">
 	<!-- Search -->
