--- a/backend/static_serve/styles/sass/_general.scss
+++ b/backend/static_serve/styles/sass/_general.scss
@@ -116,7 +116,15 @@ textarea, textarea:focus, textarea:active {
     @extend .btn-cta;
     padding: 15px 20px; 
 }
-
+.btn-disabled {
+    background: gray;
+    color: white;
+    height: 40px;
+    cursor: default;
+    &:hover, &:active, &:focus, &:visited {
+	color: white;
+    }
+}
 
 .form-control {
     height: 40px;
@@ -146,7 +154,7 @@ textarea, textarea:focus, textarea:active {
     margin-right:-4px;
 }
 
-.panel {
+article .panel {
     border: 1px solid #e9e9e9;
     webkit-box-shadow: none;
     box-shadow: none;
