--- a/backend/templates/pages/about.html
+++ b/backend/templates/pages/about.html
@@ -58,7 +58,7 @@
 
 	<h2> Upcoming Features </h2>
 	<img src="/media/images/pages/about/path.jpg"/>
-	<p> The goal of this project is to help people to go from a complete novice to a professional, published writer. In the future, you will be able to sell your stories on our marketplace, allowing you to to make money from your writing. We will also have writing competitions, prompts, and other tools that will help aspiring writers on their journey.
+	<p> The goal of this project is to help people to go from a complete novice to a professional, published writer. In the future, you will be able to make money by sell your stories. We will also have writing competitions, prompts, and other tools that will help aspiring writers on their journey.
 
 
 	<p> So come in, join our growing community, and take the first step on your path to becoming an amazing writer! </p>
