--- a/backend/templates/pages/about.html
+++ b/backend/templates/pages/about.html
@@ -56,10 +56,11 @@
 	<img src="/media/images/pages/about/kids.jpg"/>
 	<p> We also have a <a href="/on-writing/">category</a> where you can find helpful learning resources that will guide you on your path to becomming a better writer and help you to take your skill to the next level. </p>
 
+	<!-- 
 	<h2> Upcoming Features </h2>
 	<img src="/media/images/pages/about/path.jpg"/>
-	<p> The goal of this project is to help people to go from a complete novice to a professional, published writer. In the future, you will be able to make money by sell your stories. We will also have writing competitions, prompts, and other tools that will help aspiring writers on their journey.
-
+	<p> The goal of this project is to help people to go from a complete novice to a professional, published writer. In the future, you will be able to make money by selling your stories, participate in writing competitions, and use other tools that will help aspiring writers on their journey.
+	  -->
 
 	<p> So come in, join our growing community, and take the first step on your path to becoming an amazing writer! </p>
 
