--- a/backend/templates/posts/post-detail.html
+++ b/backend/templates/posts/post-detail.html
@@ -28,7 +28,7 @@
 {% endblock %}
 {% block content %}
 {# {% include "elements/subheader.html" %} #}
-<div class="container">
+<div class="container post-detail">
   <div class="row">
     <div class="col-md-12 col-sm-12 post-detail">
       {% include "posts/post.html" with truncate=False %}
