--- a/backend/static/styles/sass/_posts.scss
+++ b/backend/static/styles/sass/_posts.scss
@@ -50,11 +50,19 @@ article {
 	color: $gray;
 	/* background: rgba(0,0,0,0.02); */ /* brighter */
 	background: rgba(242, 242, 242, 0.6);
-	padding: 7px 10px;
+	padding: 7px 40px;
+	
 	margin: 5px -40px -20px -40px;
 	background-color: #fcfcfc;
 	border-top: 1px solid #e8e8e8;
 
+	@media (max-width: 700px) {
+	    padding: 10px;
+	}
+	
+	.col-xs-12, .col-sm-6 {
+	    padding: 0;
+	}
 	.label {
 	    margin-right: 4px;
 	    line-height: 25px;
@@ -88,11 +96,6 @@ article {
 		@media (max-width: 600px) {
 		    margin-right: 2px;
 		}
-	    }
-	}
-	.col-xs-12, .col-sm-6 {
-	    @media (max-width: 700px) {
-		padding: 0;
 	    }
 	}
     }
