--- a/backend/static/styles/sass/_posts.scss
+++ b/backend/static/styles/sass/_posts.scss
@@ -70,7 +70,7 @@ article {
 	/* Buttons/Voting */
 	.btn {
 	    padding: 2px 8px;
-	    margin-right: 5px;
+	    margin-left: 5px;
 	    float:left;
 	    &:hover {
 		background: $light-gray;
