--- a/backend/static/styles/sass/_posts.scss
+++ b/backend/static/styles/sass/_posts.scss
@@ -44,6 +44,9 @@ article {
 	.active {
 	    font-weight:bold!important;
 	}
+	.toc-dropdown li {
+	    font-size: 16px;
+	}
     }
     .post-footer {
 	font-size: 14px;
