--- a/backend/static_serve/styles/sass/_general.scss
+++ b/backend/static_serve/styles/sass/_general.scss
@@ -104,6 +104,7 @@ textarea, textarea:focus, textarea:active {
 }
 .btn-primary {
     color: white;
+    height: 40px;
     &:hover, &:active, &:focus, &:visited {
 	color: white;
     }
