--- a/backend/templates/posts/edit.html
+++ b/backend/templates/posts/edit.html
@@ -186,7 +186,7 @@
 		 value="{{post.series.title}}">
 	  <br/>
 
-	  <!-- Price and Free Chapters -->
+	  <!-- Price and Free Chapters 
 	  <div class="price">
 	    <label class="control-label" for="series-price">Price:</label>
 	    <select name="price" class="form-control col-xs-8">
@@ -208,6 +208,7 @@
 	      </option>
 	    </select>
 	  </div>
+
 	  <div class="free-chapters">
 	    <label class="control-label" for="free-chapters">Free Chapters:</label>
             <input class="form-control" name="free_chapters"
@@ -215,7 +216,7 @@
 		   value="{{post.series.free_chapters}}">
 	  </div>
 	  <div class="clearfix"></div> <br/>
-
+	  -->
 	  <!-- Buttons -->
 	  <button class="btn btn-primary right"
 		  type="submit">
